# HttpServer

./: CMakeLists.txt  README.md  conanfile.txt
app/: main.cpp
include/HttpParser/: HttpGetPerformer.hpp  HttpParser.hpp  HttpRequest.hpp  HttpRequestParser.hpp  HttpResponse.hpp  HttpResponseBuilder.hpp  MessageMethods.hpp  MethodCreator.hpp
include/HttpParser/Methods/: IMethod.hpp  Methods.hpp
include/HttpPerformers/: PerformerCreator.hpp
include/HttpPerformers/Performers/: GetPerformer.hpp  IPerformer.hpp
include/HttpRequestPerformer/: MethodCreator.hpp
include/HttpRequestPerformer/Methods/: GetMethod.hpp  IMethod.hpp  Methods.hpp
include/Inet/: ConnectionAcceptor.hpp  Dispatcher.hpp  DispatchersPool.hpp  Socket.hpp  SocketReader.hpp  TcpConnection.hpp  TcpServer.hpp  callbacks.hpp
include/Strategy/: EchoStrategy.hpp  HttpStrategy.hpp
include/Utils/Coroutines/: Generator.hpp
include/Utils/StringsFunctions/: StringsFunctions.hpp
include/WebSocket/: IWebSocket.hpp  IWebSocketConnection.hpp
src/: CMakeLists.txt
src/HttpParser/: CMakeLists.txt  HttpParser.cpp  HttpParserBuilder.cpp  HttpRequest.cpp  HttpRequestParser.cpp  HttpResponseBuilder.cpp  MethodCreator.cpp
src/HttpPerformers/: CMakeLists.txt  PerformerCreator.cpp
src/HttpPerformers/Performers/: GetPerformer.cpp
src/HttpRequestPerformer/: MethodCreator.cpp
src/HttpRequestPerformer/Methods/: GetMethod.cpp
src/Inet/: CMakeLists.txt  ConnectionAcceptor.cpp  Dispatcher.cpp  DispatchersPool.cpp  InetAddress.cpp  Socket.cpp  SocketPoller.cpp  SocketReader.cpp  TcpConnection.cpp
src/Strategy/: CMakeLists.txt  EchoStrategy.cpp  HttpStrategy.cpp
src/Utils/: CMakeLists.txt
src/Utils/Coroutines/: CMakeLists.txt  Generator.cpp
src/Utils/StringsFunctions/: CMakeLists.txt  StringsFunctions.cpp
src/WebSocket/: CMakeLists.txt  WebSocketConnectionImpl.cpp  WebSocketConnectionImpl.hpp
tests/: CMakeLists.txt  HttpParserTests.hpp  main_test.cpp
